--- a/tableColumns.html
+++ b/tableColumns.html
@@ -21,12 +21,12 @@
 </html>
 
 
-<table style="width: 80%;">
+<table style="width: 90%;">
     <tr>
         <th>Name</th>
         <th>Age</th>
-        <th>Field of interest</th>
-        <th>GitHub profile</th>
+        <th>Field of Interest</th>
+        <th>GitHub Profile</th>
     </tr>
     <tr>
         <td>Theodosis Paidakis</td>
